# estudo-celery

./: README.md  flower  pyproject.toml
estudo_celery/: app.py  tasks.py
